# CrypticBio

./: .env  .gitattributes  .gitignore  README.md  pyproject.toml  submit_train.sh
.github/workflows/: pylint.yml  pytest.yml
examples/: extend_database_example.py  sh_image_example.py
logs/: job_gated_fusion_model_1_2272733.out  job_late_fusion_model_42_18_2278073.out  job_late_fusion_model_42_18_2278124.out  job_late_fusion_model_42_18_2278551.out  job_late_fusion_model_86_18_2286925.out  job_run_late_fusion_model_1877567.out  job_run_late_fusion_model_1877720.out  job_run_late_fusion_model_1877728.out  job_run_late_fusion_model_1877941.out  job_run_late_fusion_model_1877943.out  job_run_late_fusion_model_1877989.out  job_run_late_fusion_model_1878189.out  job_run_late_fusion_model_2030315.out  job_run_late_fusion_model_2037463.out  tiny_transformer_model_satellite.out
logs/transformer_final/: job_train_tiny_model_2278087.out  (+10 more)
scripts/: adjust_sh_path.py  create_db.py  gradcam.py  gradcam_late_early_fusion.py  image_download.py  plot_from_out.py  resize_images.py  train_test.py  train_transformer.py
slurm/: create_plots.sh  data_analysis.sh  db_init.sh  db_update_path.sh  download_images.sh  gradcam.sh  resize_images.sh  setup_venv.sh  train_base_transformers.sh  train_base_transformers_animal_only.sh  train_base_transformers_satelite_only.sh  train_early_fusion.sh  train_gated_fusion.sh  train_late_fusion.sh  train_small_transformers.sh  train_tiny_transformers.sh  train_tiny_transformers_animal_only.sh  train_tiny_transformers_satelite_only.sh
src/: data_analysis.py  data_analysis_network.py  data_analysis_single_network.py  data_gather.py  dataset.py  early_fusion.py  job_file.sh  late_fusion.py  model_transformer.py  models.py  multimodal_dataset.py  plots.py  preprocessing.py  test.py  test_data_loader.py  train.py
tests/: test_data_gather.py
(+67 files in other folders)
